# lab05

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
tests/: test.cpp
