cmake_minimum_required(VERSION 3.4)
project(lab)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#option(BUILD_TESTS "Build tests" ON)
#enable_testing()
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/gtest" "gtest")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/banking)
add_executable(tests ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp)
#target_compile_options(tests PRIVATE --coverage)
target_include_directories(tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/banking)
target_link_libraries(tests PRIVATE banking gtest gtest_main gmock_main )
    #add_test(NAME tests COMMAND tests)
